implemented basic ui

--- a/src/App.css
+++ b/src/App.css
@@ -6,37 +6,35 @@
   height: 100%;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+::-webkit-scrollbar {
+  max-width: 10px;
+  max-height: 8px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+/* Set the style for the scrollbar track */
+::-webkit-scrollbar-track-piece {
+  background-color: var(--background-secondary);
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+::-moz-scrollbar-track {
+  background-color: var(--background-secondary);
 }
 
-.App-link {
-  color: #61dafb;
+/* Set the style for the scrollbar thumb */
+::-webkit-scrollbar-thumb {
+  background-color: #5a5a5a;
+  border-radius: 10px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+::-moz-scrollbar-thumb {
+  background-color: #5a5a5a;
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #909090;
+}
+
+*::-moz-scrollbar-thumb:hover {
+  background-color: #909090;
 }
