--- a/src/components/Dashboard.module.css
+++ b/src/components/Dashboard.module.css
@@ -1,13 +1,15 @@
 .dashboard {
-  background-color: blue;
+  border: 2px solid var(--highlight-primary);
   width: 80%;
   min-width: 750px;
-  max-width: 85em;
-  min-height: 40em;
+  max-width: 70em;
+  min-height: 30em;
   display: flex;
   flex-direction: row;
   border-radius: 1.5em;
   overflow: hidden;
+  padding: 1.1em;
+  gap: 1em;
 }
 
 @media (max-width: 750px) {
