--- a/src/components/SideInfo.module.css
+++ b/src/components/SideInfo.module.css
@@ -1,25 +1,9 @@
 .container {
-  background-color: rgb(110, 189, 189);
-  width: 70%;
+  /* background-color: rgb(110, 189, 189); */
   display: flex;
   flex-direction: column;
-  gap: 0.5em;
-  padding: 1em;
+  gap: 1em;
   min-height: 20em;
-}
-
-.day {
-  background-color: orange;
-  width: 100%;
-  height: 50%;
-  min-height: 5em;
-  border-radius: 1em;
-}
-
-.preview {
-  background-color: lemonchiffon;
-  width: 100%;
-  height: 50%;
-  min-height: 5em;
-  border-radius: 1em;
+  flex-grow: 1;
+  width: 70%;
 }
