--- a/src/components/Dashboard.module.css
+++ b/src/components/Dashboard.module.css
@@ -1,5 +1,6 @@
 .dashboard {
   border: 2px solid var(--highlight-primary);
+  background-color: #1215180d;
   width: 80%;
   min-width: 750px;
   max-width: 70em;
@@ -10,6 +11,7 @@
   overflow: hidden;
   padding: 1.1em;
   gap: 1em;
+  box-shadow: rgba(0, 0, 0, 0.2) 0px 8px 24px;
 }
 
 @media (max-width: 750px) {
