--- a/src/components/CurrentInfo.module.css
+++ b/src/components/CurrentInfo.module.css
@@ -1,6 +1,8 @@
 .container {
   /* background-color: red; */
   /* min-width: 18em; */
+  flex-grow: 1;
+  align-self: stretch;
   width: 30%;
   max-width: 18em;
   display: flex;
