--- a/src/components/Dashboard.module.css
+++ b/src/components/Dashboard.module.css
@@ -4,9 +4,11 @@
   width: 80%;
   min-width: 750px;
   max-width: 70em;
-  min-height: 30em;
+  max-height: 35em;
+  height: 80vh;
   display: flex;
   flex-direction: row;
+  align-items: flex-center;
   border-radius: 1.5em;
   overflow: hidden;
   padding: 1.1em;
