--- a/src/components/Preview.module.css
+++ b/src/components/Preview.module.css
@@ -1,13 +1,14 @@
 .container {
-    /* background-color: lemonchiffon; */
-    width: 100%;
-    /* height: 50%; */
-    min-height: 5em;
-    border-radius: 1em;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    gap: 1em;
-    align-items: center;
-    overflow-x: auto;
+  /* background-color: lemonchiffon; */
+  width: 100%;
+  /* height: 50%; */
+  min-height: 5em;
+  border-radius: 1em;
+  display: flex;
+  flex-grow: 1;
+  flex-direction: row;
+  justify-content: space-between;
+  gap: 1em;
+  align-items: stretch;
+  overflow-x: auto;
 }
