--- a/src/components/Details.module.css
+++ b/src/components/Details.module.css
@@ -10,38 +10,52 @@
   border: 2px solid var(--highlight-primary);
 }
 
-.container div{
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.container div {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .rain {
-    grid-row: 1;
-    grid-column: 0 1;
+  grid-row: 1;
+  grid-column: 0 1;
 }
 
 .humidity {
-    grid-row: 1;
-    grid-column: 1 2;
+  grid-row: 1;
+  grid-column: 1 2;
 }
 
 .uv {
-    grid-row: 2;
-    grid-column: 0 1;
+  grid-row: 2;
+  grid-column: 0 1;
 }
 
 .wind {
-    grid-row: 2;
-    grid-column: 1 2;
+  grid-row: 2;
+  grid-column: 1 2;
 }
 
 .sunrise {
-    grid-row: 3;
-    grid-column: 0 1;
+  grid-row: 3;
+  grid-column: 0 1;
 }
 
 .sunset {
-    grid-row: 3;
-    grid-column: 1 2;
+  grid-row: 3;
+  grid-column: 1 2;
+}
+
+@media (max-width: 790px) {
+  .container {
+    padding: 0.8em 0;
+    gap: 0.8em;
+  }
+
+  .container div:nth-child(even) {
+    padding-right: 2em;
+  }
+  .container div:nth-child(odd) {
+    padding-left: 2em;
+  }
 }
