--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@
   justify-content: center;
   align-items: center;
   height: 100%;
-  gap: 2em;
+  width: 100%;
 }
 
 ::-webkit-scrollbar {
@@ -43,12 +43,14 @@
 
 @media (max-width: 790px) {
   .App {
-    align-items: flex-start;
+    display: block;
+    padding-top: 3em;
   }
 }
 
-@media (max-height: 590px) {
+@media (max-height: 735px) {
   .App {
-    align-items: flex-start;
+    display: block;
+    padding-top: 3em;
   }
 }
