added error indication for search

--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,7 @@
   --bg-secondary: #2d353c;
   --highlight-primary: #655aaf;
   --highlight-secondary: #495f73;
+  --highlight-danger: #9b0000;
   --text-primary: #f3f2f1;
   --text-secondary: #495f73;
   --mobile-breakpoint: 790px;
