--- a/src/components/SearchLocation.module.css
+++ b/src/components/SearchLocation.module.css
@@ -1,3 +1,11 @@
 .input {
   margin: 0 auto 2em auto;
 }
+
+.error input {
+  border-color: var(--highlight-danger) !important;
+}
+
+.error label {
+  color: var(--highlight-danger) !important;
+}
