--- a/src/components/DayDiagramm.module.css
+++ b/src/components/DayDiagramm.module.css
@@ -1,9 +1,13 @@
 .container {
-  width: 100%;
+  width: auto;
   min-height: 5em;
   border-radius: 1em;
   border: 2px solid var(--highlight-primary);
   flex-grow: 1;
+  /* padding: 1em; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 @media (max-width: 790px) {
