--- a/src/components/Details.module.css
+++ b/src/components/Details.module.css
@@ -10,9 +10,21 @@
 }
 
 .container div {
+  padding-top: 1em;
+  padding-bottom: 1em;
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.container div:nth-child(odd) {
+  padding-left: 1em;
+  padding-right: 0.5em;
+}
+
+.container div:nth-child(even) {
+  padding-right: 1em;
+  padding-left: 0.5em;
 }
 
 .rain {
@@ -48,7 +60,12 @@
 @media (max-width: 790px) {
   .container {
     padding: 0.8em 0;
-    gap: 0.8em;
+    gap: 1.5em;
+  }
+
+  .container div {
+    padding-top: 0;
+    padding-bottom: 0;
   }
 
   .container div:nth-child(even) {
