--- a/src/components/Current.module.css
+++ b/src/components/Current.module.css
@@ -8,8 +8,8 @@
   min-height: 5em;
   height: fit-content;
   border-radius: 1em;
-  border: 2px solid var(--highlight-primary);
   padding: 1em 0;
+  box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
 }
 
 .weatherIcon {
@@ -39,5 +39,7 @@ h3 {
     width: 15em;
     min-width: 5em;
     padding: 1em 0;
+    background-color: var(--bg-secondary);
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
   }
 }
