--- a/src/components/DayDiagramm.module.css
+++ b/src/components/DayDiagramm.module.css
@@ -2,16 +2,17 @@
   width: auto;
   min-height: 5em;
   border-radius: 1em;
-  border: 2px solid var(--highlight-primary);
   flex-grow: 1;
-  /* padding: 1em; */
   display: flex;
   justify-content: center;
   align-items: center;
+  box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
 }
 
 @media (max-width: 790px) {
   .container {
     height: 15em;
+    background-color: var(--bg-secondary);
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
   }
 }
