--- a/src/components/Dashboard.module.css
+++ b/src/components/Dashboard.module.css
@@ -8,7 +8,7 @@
   display: flex;
   flex-direction: row;
   align-items: flex-center;
-  border-radius: 1.5em;
+  border-radius: 1.5em !important;
   overflow: hidden;
   padding: 1.1em;
   gap: 1em;
